--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,12 +1,44 @@
-.navbar-lewagon {
-  justify-content: space-between;
+.nav-bar{
+  display: flex;
+  align-items: center;
   background: white;
+  padding: 5px 10px;
+  a{
+    text-decoration: none;
+    color: black;
+  }
+  ul{
+    list-style: none;
+    margin: 0;
+  }
+  li{
+    margin-left: 16px;
+  }
 }
-
-.navbar-lewagon .navbar-collapse {
-  flex-grow: 0;
+.logo{
+  img{
+    height: 28px;
+  }
 }
-
-.navbar-lewagon .navbar-brand img {
-  width: 40px;
+.main-menu{
+  flex-grow: 1;
+  display: flex;
+  justify-content: space-between;
+}
+.categories-list{
+  display: flex;
+  font-family: $poppins;
+  justify-content: space-evenly;
+  font-weight: 300;
+}
+.icon-menu{
+  display: flex;
+  font-family: $poppins;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.icon{
+  img{
+    width: 16px;
+  }
 }
