--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,5 +1,5 @@
 // Import Google fonts
-@import url('https://fonts.googleapis.com/css2?family=PT+Serif&family=Poppins:wght@100;400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=PT+Serif&family=Poppins:wght@100;300;400;500&display=swap');
 
 // Define fonts for body and headers
 $body-font: 'PT Serif', "sans-serif";
