design the product list page

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,7 +1,10 @@
 // Import your components CSS files here.
 @import "alert";
 @import "avatar";
+@import "breadcrumb";
+@import "content";
 @import "footer";
 @import "header";
+@import "list";
 @import "navbar";
 @import "product-card";
