add sort and search input

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -3,6 +3,7 @@
 @import "avatar";
 @import "breadcrumb";
 @import "content";
+@import "filtering";
 @import "footer";
 @import "header";
 @import "list";
