--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -8,7 +8,10 @@
   <div class="header">
     <h1>Products</h1>
   </div>
-
+  <div class="refine-results">
+    <div id="sort"><p>Sort by:</p></div>
+    <div class="search-input"><input type="text"></div>
+  </div>
   <div class="list">
     <div class="filters">
       <p>categories</p>
