display the name of the category

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,3 +1,4 @@
+<h4>Category: <%= @category.name %> </h4>
 <% @products.each do |sub_category_products| %>
     <% sub_category_products.each do |product|   %>
       <p><%= product.name %></p>
