--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -7,7 +7,7 @@
 <% end %>
 <% @products.each do |sub_category_products| %>
     <% sub_category_products.each do |product|   %>
-      <%= link_to category_product_path(product) do %>
+      <%= link_to category_product_path(@category, product) do %>
         <p><%= product.name %></p>
         <p><%= product.price %></p>
         <p><%= product.merchant.name %></p>
