added comments of the things missing

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -12,6 +12,8 @@
 <p><%= @product.score %></p>
 <!-- product description -->
 <p><%= @product.description %></p>
+<!-- product features -->
 <!-- product merchant -->
 <p><%= @product.merchant.name %></p>
+<!-- comment that clem wrote -->
 <!-- add to cart -->
