added clem comment on the product page

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -16,4 +16,5 @@
 <!-- product merchant -->
 <p><%= @product.merchant.name %></p>
 <!-- comment that clem wrote -->
+<p><%= @product.merchant.comment %></p>
 <!-- add to cart -->
