--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -21,9 +21,9 @@
         <% sub_category_products.each do |product|   %>
           <%= link_to category_product_path(@category, product) do %>
             <div class="product-card">
-              <div class="product-img" style ="background-image: url(<%= product.photo %>)">
+              <div class="product-img" style ="background-image: url(<%= product.photo_1 %>)">
                 <div class="price">
-                  <p><%= prodcut.price %>$</p>
+                  <p><%= product.price %>$</p>
                 </div>
                 <div class="product-icons">
                   <div class="icon-btn">
