--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,7 +1,7 @@
 <!-- product name -->
 <p><%= @product.name %></p>
 <!-- product picture -->
-<p><%= @product.photo %></p>
+<p><%= @product.photo_1 %></p>
 <!-- product sub category -->
 <p><%= @product.sub_category.name %></p>
 <!-- product category -->
