adjust font size in breadcrumbs, update footer css

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -3,8 +3,8 @@
   font-family: $poppins;
   flex-direction: column;
   padding: 0 24px;
-  position: absolute;
-  bottom: 0;
+  // position: absolute;
+  // bottom: 0;
   width: 100%;
 }
 .footer-menu {
