design filter component

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -6,6 +6,8 @@
   // position: absolute;
   // bottom: 0;
   width: 100%;
+  font-size: 14px;
+  font-weight: 200;
 }
 .footer-menu {
   display: flex;
