--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -4,6 +4,7 @@
 @import "breadcrumb";
 @import "content";
 @import "filtering";
+@import "filter";
 @import "footer";
 @import "header";
 @import "list";
