--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -10,7 +10,10 @@
   </div>
   <div class="refine-results">
     <div id="sort"><p>Sort by:</p></div>
-    <div class="search-input"><input type="text"></div>
+    <div class="search-bar">
+      <div id="search-icon" style="background-image: url(<%= image_path 'search-icon' %>)""></div>
+      <input type="search" id="search-input" placeholder='Search'>
+    </div>
   </div>
   <div class="list">
     <div class="filters">
