--- a/app/assets/stylesheets/components/_product-card.scss
+++ b/app/assets/stylesheets/components/_product-card.scss
@@ -29,8 +29,14 @@
 }
 .product-infos{
   h4{
-    font-size: 1.2rem;
+    font-size: 1.04rem;
     margin-bottom: 0;
     margin-top: 10px;
+  }
+  a{
+    color: black;
+  }
+  p{
+    color: #939393;
   }
 }
