--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -2,6 +2,7 @@
 @import "alert";
 @import "avatar";
 @import "breadcrumb";
+@import "carousel";
 @import "content";
 @import "filtering";
 @import "footer";
