--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,7 +1,37 @@
+<!-- product picture carousel -->
+<div id="product-carousel" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active carousel-product-img">
+      <img src="<%= @product.photo_1 %>" alt="">
+    </div>
+    <div class="carousel-item carousel-product-img">
+      <img src="<%= @product.photo_1 %>" alt="">
+    </div>
+    <div class="carousel-item carousel-product-img">
+      <img src="<%= @product.photo_1 %>" alt="">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#product-carousel" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#product-carousel" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
+
+
+
+
+
+
+
+
+<!-- <p><%= @product.photo_1 %></p> -->
 <!-- product name -->
 <p><%= @product.name %></p>
-<!-- product picture -->
-<p><%= @product.photo_1 %></p>
 <!-- product sub category -->
 <p><%= @product.sub_category.name %></p>
 <!-- product category -->
