--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -11,8 +11,8 @@
   <div class="refine-results">
     <div id="sort"><p>Sort by:</p></div>
     <div class="search-bar">
-      <div id="search-icon" style="background-image: url(<%= image_path 'search-icon' %>)""></div>
-      <input type="search" id="search-input" placeholder='Search'>
+      <div id="search-icon" style="background-image: url(<%= image_path 'search-icon' %>)"></div>
+      <input type="search" id="search-input" placeholder="Search">
     </div>
   </div>
   <div class="list">
