finalize design product show page

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -71,7 +71,10 @@
       <div id="opening-icon"><%= image_tag 'quote-icon' %></div>
         <p><%= @product.merchant.comment %></p>
       <div id="closing-icon"><%= image_tag 'quote-icon' %></div>
-      <p id="founder">Clémence Founder</p>
+      <div id="founder">
+        <div id="line"></div>
+        <p>Clémence Founder</p>
+      </div>
     </div>
   </div>
   <!-- add to cart -->
