--- a/app/assets/stylesheets/components/_product-comment.scss
+++ b/app/assets/stylesheets/components/_product-comment.scss
@@ -1,11 +1,11 @@
 // admin comment about merchant
 .product-comment{
-  // display: flex;
-  // justify-content: space-between;
+    display: flex;
+    align-items: center;
 }
 .blue-square{
   background: #D7ECF1;
-  width: 280px;
+  width: 100%;
   height: 180px;
 }
 .comment{
@@ -16,19 +16,27 @@
   justify-content: center;
   align-items: center;
   padding: 20px 40px;
-  width: 700px;
   position: relative;
-  bottom: 120px;
-  left: 90px;
+  top: 80px;
+  right: 130px;
   p{
     margin-bottom: 0;
   }
 }
 #founder{
-  border-top: 1px solid $gray;
   width: 50%;
   font-family: $poppins;
+  font-style: italic;
+  #line{
+    width: 33%;
+    border-top: 1px solid black;
+  }
+  p{
+    margin-top: 8px;
+    text-align: left;
+  }
 }
+
 #opening-icon{
   width: 100%;
   display: flex;
