--- a/app/views/merchants/show.html.erb
+++ b/app/views/merchants/show.html.erb
@@ -1,1 +1,46 @@
-<h1>Merchant</h1>
+<!-- merchant name -->
+
+<p><%= @merchant.name %></p>
+<!-- merchant description -->
+<p><%= @merchant.description %></p>
+<!-- merchant location -->
+<p><%= @merchant.location %></p>
+<!-- merchant public_email -->
+<p><%= @merchant.public_email %></p>
+<!-- merchant social-media -->
+<p><%= @merchant.facebook %></p>
+<p><%= @merchant.instagram %></p>
+<!-- clem comment -->
+<p><%= @merchant.comment %></p>
+<!-- merchant website -->
+<p><%= @merchant.website %></p>
+<!-- merchant picture -->
+<p><%= @merchant.picture_1 %></p>
+<!-- merchant products -->
+<h4>Products</h4>
+<% @merchant.products.each do |product| %>
+  <div class="product-card">
+    <div class="product-img" style ="background-image: url(<%= product.photo_1 %>)">
+      <div class="price">
+        <p><%= product.price %>$</p>
+      </div>
+      <div class="product-icons">
+        <div class="icon-btn">
+          <a href="#"><%= image_tag 'love-list-icon'%></a>
+        </div>
+        <div class="icon-btn">
+          <a href="#"><%= image_tag 'shopping-bag-icon' %></a>
+        </div>
+      </div>
+    </div>
+    <div class="product-infos">
+      <%= link_to category_product_path(product.sub_category.category, product) do %>
+        <h4><%= product.name %></h4>
+      <% end %>
+      <%= link_to merchant_path(product.merchant) do %>
+        <p><%= @merchant.name %></p>
+      <% end %>
+    </div>
+  </div>
+<% end %>
+
