--- a/app/assets/stylesheets/components/_carousel.scss
+++ b/app/assets/stylesheets/components/_carousel.scss
@@ -16,3 +16,23 @@
 .carousel-inner{
   height: 100%;
 }
+.carousel-prev, .carousel-next{
+  position: absolute;
+  bottom: -22px;
+  z-index: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  text-align: center;
+  transition: opacity 0.15s ease
+}
+.carousel-next{
+  right:0;
+}
+.carousel-prev{
+  left:0;
+  img{
+    transform: rotate(180deg);
+  }
+}
