--- a/app/assets/stylesheets/components/_product-comment.scss
+++ b/app/assets/stylesheets/components/_product-comment.scss
@@ -2,6 +2,8 @@
 .product-comment{
     display: flex;
     align-items: center;
+    margin-bottom: 20px;
+    padding-bottom: 80px;
 }
 .blue-square{
   background: #D7ECF1;
