create merchant infos

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -10,6 +10,8 @@
 @import "footer";
 @import "header";
 @import "list";
+@import "merchant-comment";
+@import "merchant-details";
 @import "navbar";
 @import "product-card";
 @import "product-comment";
