--- a/app/assets/stylesheets/components/_merchant-details.scss
+++ b/app/assets/stylesheets/components/_merchant-details.scss
@@ -1,6 +1,23 @@
 .merchant-details{
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
+  margin-bottom: 20px;
+}
+.merchant-infos{
+  border-right: 1px solid black;
+  padding-right: 20px;
+  p{
+    font-size: 14px;
+  }
+}
+.merchant-labels{
+  align-self: center;
+  height: 100%;
+  width: 100%;
+  border-right: 1px solid black;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
 }
 
 .merchant-links{
