create the left side of the header

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -12,6 +12,7 @@
 @import "list";
 @import "merchant-comment";
 @import "merchant-details";
+@import "merchant-header";
 @import "navbar";
 @import "product-card";
 @import "product-comment";
