--- a/app/views/merchants/show.html.erb
+++ b/app/views/merchants/show.html.erb
@@ -3,11 +3,14 @@
 <div class="merchant-header">
   <div class="merchant-header-left">
     <div class="blue-rectangle"></div>
-    <div class="main-photo">
-      <!-- merchant name -->
-      <h1><%= @merchant.name %></h1>
-       <!-- merchant location -->
+    <div class="main-photo" style="background-image: url(https://images.unsplash.com/photo-1545007805-a44ee83438fa)">
+      <div class="header-content">
+         <!-- merchant name -->
+        <h1><%= @merchant.name %></h1>
+        <!-- merchant location -->
         <p><%= @merchant.location %></p>
+      </div>
+
     </div>
 
   </div>
