--- a/app/views/merchants/show.html.erb
+++ b/app/views/merchants/show.html.erb
@@ -17,17 +17,20 @@
 
   <div class="merchant-header-right">
     <div class="merchant-gallery">
-      <div class="merchant-duo-photos"></div>
-      <img src="" alt="">
+      <div class="merchant-duo-photos">
+        <div class="picture-1" style="background-image: url(https://images.unsplash.com/photo-1573612664822-d7d347da7b80)"></div>
+        <div class="picture-2" style="background-image: url(https://images.unsplash.com/photo-1564227502985-91742d806cff)"></div>
+      </div>
+      <img src="https://images.unsplash.com/photo-1531540823824-7d09de6461c8" alt="">
     </div>
   </div>
 </div>
 
 
   <!-- merchant picture -->
-  <%= image_tag @merchant.picture_1 %>
-  <%= image_tag @merchant.picture_2 %>
-  <%= image_tag @merchant.picture_3 %>
+  <%#= image_tag @merchant.picture_1 %>
+  <%#= image_tag @merchant.picture_2 %>
+  <%#= image_tag @merchant.picture_3 %>
 
 
 
