design merchant product list

--- a/app/assets/stylesheets/components/_merchant-comment.scss
+++ b/app/assets/stylesheets/components/_merchant-comment.scss
@@ -1,6 +1,6 @@
 .merchant-comment{
   background:#D7ECF1;
   text-align: center;
-  padding: 36px;
-  margin-bottom: 20px;
+  padding: 80px 36px;
+  margin-bottom: 60px;
 }
