--- a/app/views/merchants/show.html.erb
+++ b/app/views/merchants/show.html.erb
@@ -3,7 +3,7 @@
 <div class="merchant-header">
   <div class="merchant-header-left">
     <div class="blue-rectangle"></div>
-    <div class="main-photo" style="background-image: url(https://images.unsplash.com/photo-1545007805-a44ee83438fa)">
+    <div class="main-photo" style="background-image: linear-gradient(rgba(255,255,255,0.3), rgba(255,255,255,0.3)),url(https://images.unsplash.com/photo-1545007805-a44ee83438fa)">
       <div class="header-content">
          <!-- merchant name -->
         <h1><%= @merchant.name %></h1>
@@ -16,10 +16,10 @@
   <div class="merchant-header-right">
     <div class="merchant-gallery">
       <div class="merchant-duo-photos">
-        <div class="picture-1" style="background-image: url(https://images.unsplash.com/photo-1573612664822-d7d347da7b80)"></div>
-        <div class="picture-2" style="background-image: url(https://images.unsplash.com/photo-1564227502985-91742d806cff)"></div>
+        <div class="picture-1" style="background-image: linear-gradient(rgba(255,255,255,0.3), rgba(255,255,255,0.3)),url(https://images.unsplash.com/photo-1573612664822-d7d347da7b80)"></div>
+        <div class="picture-2" style="background-image: linear-gradient(rgba(255,255,255,0.3), rgba(255,255,255,0.3)),url(https://images.unsplash.com/photo-1564227502985-91742d806cff)"></div>
       </div>
-      <img src="https://images.unsplash.com/photo-1531540823824-7d09de6461c8" alt="">
+        <div class="picture-3" style="background-image: linear-gradient(rgba(255,255,255,0.3), rgba(255,255,255,0.3)),url(https://images.unsplash.com/photo-1531540823824-7d09de6461c8)"></div>
     </div>
   </div>
 </div>
