--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,6 +1,6 @@
 <div class="content merchant-container">
   <div class="row merchant-form">
-    <div class="col-ws-12 col-sm-6 col-sm-offset-3">
+    <div class="col-xs-12 col-sm-9 col-sm-offset-3">
       <h1>Merchant Application</h1>
       <h6>Heron Market pride itself in offering products and promoting brands whose value align with ours.
       If one of the following apply to you, you are more than welcome to apply and <strong>let's connect!</strong></h6>
@@ -15,32 +15,44 @@
         </div>
         <div class="row">
           <div class="col-sm-12">
-            <%= f.input :email, placehoder: "Email" %>
+            <%= f.input :email %>
           </div>
         </div>
         <div class="row">
           <div class="col-sm-6">
-            <%= f.input :location, placehoder: "Location" %>
+            <%= f.input :location %>
           </div>
           <div class="col-sm-6">
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-sm-12">
-            <%= f.input :website, placehoder: "Website" %>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-sm-6">
-            <%= f.input :instagram, placehoder: "Instagram" %>
+            <%= f.input :category_ids, label: "Category", collection: Category.all %>
           </div>
           <div class="col-sm-6">
-            <%= f.input :facebook, placehoder: "facebook" %>
           </div>
         </div>
         <div class="row">
           <div class="col-sm-12">
-            <%= f.input :description, placehoder: "Describe your business", size: "50x6" %>
+            <%= f.input :website %>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-12">
+            <%= f.association :labels, as: :check_boxes, collection: Label.all %>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-6">
+            <%= f.input :instagram %>
+          </div>
+          <div class="col-sm-6">
+            <%= f.input :facebook %>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-12">
+            <%= f.input :description, label: "Describe your business", size: "83x6" %>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-12">
           </div>
         </div>
       <% end %>
