fixed the link for the merchant show in the product show

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -34,7 +34,9 @@
         <div class="product-details-infos">
           <!-- merchantname, product name and sku  -->
           <div>
-            <a href="./merchants/show.html.erb"><%= @product.merchant.name %></a>
+            <%= link_to merchant_path(@product.merchant) do %>
+              <h7><%= @product.merchant.name %></h7>
+            <% end %>
             <h1><%= @product.name %></h1>
             <p>SKU NO: SKU3792</p>
           </div>
