Added email column to merchant table in Db for MerchantMailer

--- a/app/views/merchant_mailer/thank_you.html.erb
+++ b/app/views/merchant_mailer/thank_you.html.erb
@@ -1,5 +1,9 @@
-<h1>Merchant#thank_you</h1>
+<h1>Thank you!</h1>
 
-<p>
-  <%= @greeting %>, find me in app/views/merchant_mailer/thank_you.html.erb
-</p>
+<p>Hi <%= @user.email %>,</p>
+
+<p>Thank you for your application to Heron Market!</p>
+<p>Your application will be reviewed and you will be contacted shortly.</p>
+
+<p>Kind regards,</p>
+<p><em>Heron Market Team</em></p>
